<resources>
    <string name="app_name">ImmiGreat</string>
    <string name="welcomeStr">Welcome!</string>
    <string name="welcomeStr1">स्वागत हे!</string>
    <string name="welcomeStr2">欢迎!</string>
    <string name="welcomeStr3">أهلا بك!</string>
    <string name="menuButton1Str">Public Transportation</string>
    <string name="menuButton2Str">Laws</string>
    <string name="menuButton3Str">Healthcare</string>
    <string name="lawsHeadingStr">Laws</string>
    <string name="transportationHeadingStr">Transportation</string>
    <string name="lawsEducationHeadingStr">Education</string>
    <string name="lawsDrivingHeadingStr">Driving</string>
    <string name="lawsDrivingApplyingLicenseHeadingStr">Applying for a Class D License</string>
    <string name="lawsDrivingForeignPolicyHeadingStr">Foreign Policy</string>
    <string name="lawsDrivingCellPhoneHeadingStr">Cell Phone Usage</string>
    <string name="lawsDrivingJOLHeadingStr">Junior Operator License Requirements</string>
    <string name="lawsKnowYourRightsHeadingStr">Know Your Rights</string>
    <string name="lawsDiscriminationHeadingStr">Antidiscrimination</string>
    <string name="lawsHealthcareHeadingStr">Healthcare</string>
    <string name="lawsHealthcarePageNewArrivalsStr">What Do I Do First?</string>
    <string name="lawsHealthcarePageSpecialConcernsStr">Specific Groups and Special Health Concerns</string>
    <string name="lawsHealthcarePageFactsheetsStr">Factsheets and Other Resources</string>
    <string name="lawsPublicChargeHeadingStr">Public Charge</string>
    <string name="transportationStayingLocalHeadingStr">Staying Local?</string>
    <string name="transportationGoingFarHeadingStr">Going Further Afield?</string>
    <string name="transportationAccessibilityHeadingStr">Is accessibility a concern?</string>
    <string name="transportationStayingLocalSubwayStr">Subway</string>
    <string name="transportationStayingLocalSubwaySchedulesStr">Schedules, Routes, and Maps</string>
    <string name="transportationStayingLocalSubwayFaresStr">Fares</string>
    <string name="transportationStayingLocalSubwayEtiquetteStr">Etiquette</string>
    <string name="transportationStayingLocalSubwayAccessibilityStr">Accessibility</string>
    <string name="transportationStayingLocalSubwayLanguageServicesStr">Language Services</string>
    <string name="transportationBusStr">Bus Routes</string>
    <string name="transportationBusScheduleStr">Schedules and Routes</string>
    <string name="transportationBusFaresStr">Fares</string>
    <string name="transportationBusEtiquetteStr">Etiquette</string>
    <string name="transportationStayingLocalFerryStr">Ferry Routes</string>
    <string name="transportationStayingLocalFerrySchedulesStr">Schedules</string>
    <string name="transportationStayingLocalFerryFaresStr">Fares</string>
    <string name="transportationStayingLocalFerryNavigatingFerryDocksStr">Navigating Ferry Docks</string>
    <string name="transportationStayingLocalFerryDuringtheTripStr">During the Trip</string>
    <string name="transportationGoingFarCommuterRailStr">Commuter Rail</string>
    <string name="transportationGoingFarCommuterRailSchedulesStr">Schedules and Routes</string>
    <string name="transportationGoingFarCommuterRailFaresStr">Fares</string>
    <string name="transportationGoingFarCommuterRailNavigatingCommuterRailStationsStr">Navigating Commuter Rail Stations</string>
    <string name="transportationGoingFarCommuterRailOntheTrainStr">On the Train</string>
    <string name="transportationGoingFarCommuterRailAccessibilityStr">Accessibility</string>
    <string name="transportationAccessibilityTheRIDEStr">The RIDE</string>
    <string name="infoButtonHeadingSTR">Welcome to ImmiGreat!</string>
    <string name="infoButtonSubHeadingSTR">General Information</string>
    <string name="error404PageContentStr">ERROR</string>
    <string name="lawsHealthcarePageOverviewStr">All people in Massachusetts, regardless of
        immigration status, have access to some sort of healthcare. For more information on the
        different forms of healthcare and what forms you are eligible for, see below:
    </string>
    <string name="lawsHealthcareNewArrivalsHeading1">Preventative and Early Care</string>
    <string name="lawsHealthcareNewArrivalsContent1">There are a variety of different ways which can
        be done, but one of the easiest is the
        <a href="https://www.mass.gov/refugee-health-assessment-program-rhap">RHAP (Refugee Health
            Assessment Program).</a> RHAP is a service provided by the Massachusetts Office for
        Refugees and Immigrants, and they work to provide services which are both linguistically and
        culturally appropriate to people who are newly arriving to the country. \n In addition to
        primary assessment services, RHAP provides follow up check ups, immunizations, and referral
        to primary care services. \n \n A second association which offers similar services is the
        <a href="https://www.acf.hhs.gov/orr/programs/preventive-health/about">Refugee Preventative
            Health Program (RHP)</a> through the Office of Refugee Resettlement, provided by the
        federal government.
    </string>
    <string name="lawsHealthcareNewArrivalsHeading2">Ongoing Care: Refugee Medical Assistance (RMA)
    </string>
    <string name="lawsHealthcareNewArrivalsContent2">Individuals who have gained legal refugee
        status or anyone else eligible for Office of Refugee Resettlement (ORR) service (determine
        your eligibility <a href="https://www.acf.hhs.gov/orr/about/what-we-do">here</a>) but are
        not eligible for medicaid are entitled to 8 months of Refugee Medical Assistance. RMA
        provides similar benefits to medicaid, but to this specific population. Please note that: \n
        -This 8 month period starts on the date of arrival to the United States, not date of
        entering the program \n -After the 8 months have elapsed, individuals must determine their
        qualified immigrant status to see what healthcare they are eligible for. Learn more about
        qualified immigrant status
        <a href="https://www.nilc.org/issues/economic-support/overview-immeligfedprograms/">here</a>.
    </string>
    <string name="transportationStayingLocalSubwayOverviewStr">The subway, or occasionally simply
        referred to as the “T” is a group of underground trains which travel specifically within the
        greater Boston area. The T is composed of 4 major lines: Red, Orange, Green, and Blue, but
        all of these lines do connect to each other, allowing for travel across all parts of the
        area. For a general guide on using the subway, click
        <a href="https://www.mbta.com/guides/subway-guide">here.</a>
        For more specific information see below:</string>
    <string name="transportationGoingFarCommuterRailOverviewStr">The commuter rail offers easy
        connections between Boston and surrounding communities
    </string>
    <string name="transportationGoingFarCommuterRailNavigatingStationsHeading1">Parking</string>
    <string name="transportationGoingFarCommuterRailNavigatingStationsContent1">Some Commuter Rail
        stations have parking. To check if a station has parking, click
        <a href="https://www.mbta.com/stops/commuter-rail">here</a>; all stations marked with a “P”
        have available parking.
    </string>
    <string name="transportationGoingFarCommuterRailNavigatingStationsHeading2">Boarding the Train</string>
    <string name="transportationGoingFarCommuterRailNavigatingStationsContent2">At single-platform
        stations, there is only one location to get on the train. At multiple-platform stations,
        platforms will be numbered or lettered and train details will be posted on digital signs
        several minutes before arrival. At large stations, there will be a departure board in the
        main terminal with every train’s platform number, however hese may not be available until a
        few minutes before the train arrives.</string>
    <string name="transportationGoingFarCommuterRailNavigatingStationsHeading3">Restrooms</string>
    <string name="transportationGoingFarCommuterRailNavigatingStationsContent3">Large stations have
        public restrooms but not all stations have public restrooms. Restrooms are available on the
        Commuter Rail trains themselves; they are located at the ends of some cars.
    </string>
    <string name="transportationGoingFarCommuterRailNavigatingStationsHeading4">Need Assistance?</string>
    <string name="transportationGoingFarCommuterRailNavigatingStationsContent4">If assistance is
        needed, at North, South, and Back Bay stations, staff are available from 5:30 AM - 12 AM
        Monday through Friday and 7 AM - 11 PM on weekends and holidays. At other stations staff
        members may be available on a limited basis. Call Customer Support at <a href="tel:+16172223200">(617)222-3200</a>
        if assistance is needed.
    </string>
    <string name="transportationAccessibilityHeading1">Who can use the RIDE?</string>
    <string name="transportationAccessibilityContent1">-Both people with physical disabilities as
        well as temporary mobility impairments caused by injury may be eligible for the RIDE, as the
        RIDE is a safety-net service, and thus eligibility is determined on the basis of inability
        to use other forms of public transportation.\n-Both Boston area residents and visitors to
        the Boston area can become certified RIDE users. For more information about using the RIDE
        as a visitor, click
        <a href="https://www.mbta.com/accessibility/the-ride/the-ride-paratransit-visitors">here</a>.
        \n-All certified RIDE customers are allowed to bring their Personal Care Attendant (PCA) on
        the RIDE with them free of charge. If space is available, they can also bring one guest at
        standard RIDE rates.
    </string>
    <string name="transportationAccessibilityHeading2">How to apply for a RIDE certification</string>
    <string name="transportationAccessibilityContent2">A ride certification can be obtained for
        eligible individuals by following these 3 steps:\n-1. Call the RIDE eligibility center (TREC)
        at <a href="tel:+16173372727">(617)337-2727</a> to set up an appointment for your
        interview\n2. Complete an interview at the TREC where you can tell a Mobility Coordinator
        about yourself and your circumstances which make using the RIDE a necessity.\n3. For more
        details on how to apply for a RIDE certification, click
        <a href="https://www.mbta.com/accessibility/the-ride/how-apply-the-ride">here</a>.
    </string>
    <string name="transportationAccessibilityHeading3">RIDE user policies</string>
    <string name="transportationAccessibilityContent3">If you are a certified RIDE user, click
        <a href="https://www.mbta.com/accessibility/the-ride/the-ride-policies">here</a> to see the
        general rules and etiquette to follow while using the RIDE.
    </string>
</resources>