<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransportationGoingFarCommuterRailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/transportationGoingFarCommuterRailHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/transportationGoingFarCommuterRailStr"
            android:textAlignment="center"
            android:textSize="24sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/lawsEducationButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transportationMenuPageHeading" />

        <TextView
            android:id="@+id/transportationGoingFarCommuterRailOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transportationGoingFarCommuterRailOverviewStr" />

        <Button
            android:id="@+id/transportationGoingFarCommuterRailSchedules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="performStartSchedulesPage"
            android:text="@string/transportationGoingFarCommuterRailSchedulesStr" />

        <Button
            android:id="@+id/transportationGoingFarCommuterRailFaresContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="performStartFaresPage"
            android:text="@string/transportationGoingFarCommuterRailFaresStr" />

        <Button
            android:id="@+id/transportationGoingFarCommuterRailNavigatingCommuterRailStations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="performStartNavigatingCommuterRailStationsPage"
            android:text="@string/transportationGoingFarCommuterRailNavigatingCommuterRailStationsStr" />

        <Button
            android:id="@+id/transportationGoingFarCommuterRailOntheTrain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="performStartOntheTrainPage"
            android:text="@string/transportationGoingFarCommuterRailOntheTrainStr" />

        <Button
            android:id="@+id/transportationGoingFarCommuterRailAccessibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="performStartAccessibilityPage"
            android:text="@string/transportationGoingFarCommuterRailAccessibilityStr" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>