<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransportationStayingLocalSubwayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/transportationStayingLocalPageHeading2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/transportationStayingLocalSubwayStr"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/lawsEducationHeading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/lawsEducationHeading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transportationMenuPageHeading" />

        <TextView
            android:id="@+id/transportationStayingLocalSubwayOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transportationStayingLocalSubwayOverviewStr" />

        <Button
            android:id="@+id/transportationStayingLocalSubwaySchedules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="performStartSchedulesPage"
            android:text="@string/transportationStayingLocalSubwaySchedulesStr" />

        <Button
            android:id="@+id/transportationStayingLocalSubwayjFares"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="performStartFaresPage"
            android:text="@string/transportationStayingLocalSubwayFaresStr" />

        <Button
            android:id="@+id/transportationStayingLocalSubwayEtiquette"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="performStartEtiquettePage"
            android:text="@string/transportationStayingLocalSubwayEtiquetteStr" />

        <Button
            android:id="@+id/transportationStayingLocalSubwayAccessibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="performStartAccessibilityPage"
            android:text="@string/transportationStayingLocalSubwayAccessibilityStr" />

        <Button
            android:id="@+id/transportationStayingLocalSubwayLanguageServices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="performStartLanguageServicesPage"
            android:text="@string/transportationStayingLocalSubwayLanguageServicesStr" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>