<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LawsHealthcareFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lawsHealthcareOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lawsHealthcarePageOverviewStr" />

            <Button
                android:id="@+id/lawsHealthcareNewArrivals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lawsHealthcarePageNewArrivalsStr" />

            <Button
                android:id="@+id/lawsHealthcareSpecialConcerns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lawsHealthcarePageSpecialConcernsStr" />

            <Button
                android:id="@+id/lawsHealthcareFactsheets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lawsHealthcarePageFactsheetsStr" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>