<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransportationGoingFarCommuterRailNavigatingCommuterRailStationsFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/transportationGoingFarCommuterRailNavigatingCommuterRailStationsHeading1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transportationGoingFarCommuterRailNavigatingStationsHeading1"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/transportationGoingFarCommuterRailNavigatingCommuterRailStationsContent1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transportationGoingFarCommuterRailNavigatingStationsContent1" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/lawsEducationButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transportationMenuPageHeading" />

        <TextView
            android:id="@+id/transportationGoingFarCommuterRailNavigatingCommuterRailStationsHeading2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transportationGoingFarCommuterRailNavigatingStationsHeading2"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/transportationGoingFarCommuterRailNavigatingCommuterRailStationsContent2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transportationGoingFarCommuterRailNavigatingStationsContent2" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/lawsEducationButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transportationMenuPageHeading" />

        <TextView
            android:id="@+id/transportationGoingFarCommuterRailNavigatingCommuterRailStationsHeading3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transportationGoingFarCommuterRailNavigatingStationsHeading3"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/transportationGoingFarCommuterRailNavigatingCommuterRailStationsContent3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transportationGoingFarCommuterRailNavigatingStationsContent3" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/lawsEducationButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transportationMenuPageHeading" />

        <TextView
            android:id="@+id/transportationGoingFarCommuterRailNavigatingCommuterRailStationsHeading4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transportationGoingFarCommuterRailNavigatingStationsHeading4"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/transportationGoingFarCommuterRailNavigatingCommuterRailStationsContent4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transportationGoingFarCommuterRailNavigatingStationsContent4" />

    </LinearLayout>

</FrameLayout>