<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LawsHealthcareNewArrivalsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/healthcareNewArrivalsHeading1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lawsHealthcareNewArrivalsHeading1"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/healthcareNewArrivalsContent1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lawsHealthcareNewArrivalsContent1" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/lawsEducationHeading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transportationMenuPageHeading" />

        <TextView
            android:id="@+id/healthcareNewArrivalsHeading2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lawsHealthcareNewArrivalsHeading2"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/healthcareNewArrivalsContent2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lawsHealthcareNewArrivalsContent2" />
    </LinearLayout>

</FrameLayout>