<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransportationStayingLocalFerryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/transportationGoingFarCommuterRailOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/transportationStayingLocalFerryStr"
            android:textAlignment="center"
            android:textSize="24sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/lawsEducationButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transportationMenuPageHeading" />

        <Button
            android:id="@+id/transportationStayingLocalFerrySchedules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="performStartSchedulesPage"
            android:text="@string/transportationStayingLocalFerrySchedulesStr" />

        <Button
            android:id="@+id/transportationStayingLocalFerryFares"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="performStartFaresPage"
            android:text="@string/transportationStayingLocalFerryFaresStr" />

        <Button
            android:id="@+id/transportationStayingLocalFerryNavigatingFerryDocks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="performStartNavigatingFerryDocksPage"
            android:text="@string/transportationStayingLocalFerryNavigatingFerryDocksStr" />

        <Button
            android:id="@+id/transportationStayingLocalFerryDurringtheTrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="performStartDuringtheTripPage"
            android:text="@string/transportationStayingLocalFerryDuringtheTripStr" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>