<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransportationBusActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/transportationBusHeading"
            style="@style/HeadingStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/transportationBusStr"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/lawsEducationButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/transportationBusSchedules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="performStartSchedulePage"
            android:text="@string/transportationBusScheduleStr" />

        <Button
            android:id="@+id/transportationBusFares"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="performStartFaresPage"
            android:text="@string/transportationBusFaresStr" />

        <Button
            android:id="@+id/transportationBusEtiquette"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="performStartEtiquettePage"
            android:text="@string/transportationBusEtiquetteStr" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>